--- a/Design/resources.qrc
+++ b/Design/resources.qrc
@@ -1,9 +1,14 @@
 <RCC>
   <qresource prefix="images">
+    <file>images/images/logofumcare01.png</file>
+    <file>images/images/PyDracula_horizontal.png</file>
     <file>images/images/PyDracula.png</file>
     <file>images/images/PyDracula_vertical.png</file>
   </qresource>
   <qresource prefix="icons">
+    <file>images/icons/leg (1).png</file>
+    <file>images/icons/leg.png</file>
+    <file>images/icons/leg2.png</file>
     <file>images/icons/cil-3d.png</file>
     <file>images/icons/cil-4k.png</file>
     <file>images/icons/cil-account-logout.png</file>
